# demo_dll

./: CMakeLists.txt  README.md
my_lib/: CMakeLists.txt
my_lib/include/: calculator_lib.h  calculator_lib_global.h
my_lib/src/: calculator_lib.cpp
